--- a/app.html
+++ b/app.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mata Mosquito</title>
+    <link rel="stylesheet" href="style.css">
     <script src="./jogo.js" feder></script>
 </head>
-<body onresize="ajustaTamanhoPalcoJogo()">
+<body onresize="ajustaTamanhoPalcoJogo();">
 
+    <script>
+        posicaoRandomica();
+    </script>
 </body>
 </html>
