Criando a função setInterval

--- a/app.html
+++ b/app.html
@@ -10,7 +10,9 @@
 <body onresize="ajustaTamanhoPalcoJogo();">
 
     <script>
-        posicaoRandomica();
+        setInterval(function name(params) {
+            posicaoRandomica();
+        }, 1000)
     </script>
 </body>
 </html>
