--- a/app.html
+++ b/app.html
@@ -9,6 +9,15 @@
 </head>
 <body onresize="ajustaTamanhoPalcoJogo();">
 
+    <div class="painel">
+        <div class="vidas">
+            <img src="./imagens/coracao_vazio.png" alt="">
+            <img src="./imagens/coracao_cheio.png" alt="">
+            <img src="./imagens/coracao_cheio.png" alt="">
+        </div>
+        <div class="cronometro">Tempo Restante: ?</div>
+    </div>
+
     <script>
         setInterval(function name(params) {
             posicaoRandomica();
