--- a/app.html
+++ b/app.html
@@ -11,9 +11,9 @@
 
     <div class="painel">
         <div class="vidas">
-            <img src="./imagens/coracao_vazio.png" alt="">
-            <img src="./imagens/coracao_cheio.png" alt="">
-            <img src="./imagens/coracao_cheio.png" alt="">
+            <img id="v1" src="./imagens/coracao_cheio.png" alt="">
+            <img id="v2" src="./imagens/coracao_cheio.png" alt="">
+            <img id="v3" src="./imagens/coracao_cheio.png" alt="">
         </div>
         <div class="cronometro">Tempo Restante: ?</div>
     </div>
