Criando o cronômetro do jogo

--- a/app.html
+++ b/app.html
@@ -15,13 +15,14 @@
             <img id="v2" src="./imagens/coracao_cheio.png" alt="">
             <img id="v3" src="./imagens/coracao_cheio.png" alt="">
         </div>
-        <div class="cronometro">Tempo Restante: ?</div>
+        <div class="cronometro">Tempo Restante: <span id="cronometro"></span></div>
     </div>
 
     <script>
-        setInterval(function name(params) {
+        document.getElementById('cronometro').innerHTML = tempo;
+        var criaMosquito = setInterval(function name(params) {
             posicaoRandomica();
-        }, 1000)
+        }, 2000);
     </script>
 </body>
 </html>
