Adicionando o tempo dinâmico ao script do jogo

--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mata Mosquito</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./jogo.js" feder></script>
+    <script src="./jogo.js"></script>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo();">
 
@@ -20,9 +20,9 @@
 
     <script>
         document.getElementById('cronometro').innerHTML = tempo;
-        var criaMosquito = setInterval(function name(params) {
+        var criaMosquito = setInterval(function () {
             posicaoRandomica();
-        }, 2000);
+        }, criaMosquitoTempo);
     </script>
 </body>
 </html>
