--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mata Mosquito</title>
+    <title>Mata Mosquito - O Jogo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script>
@@ -13,6 +13,7 @@
                 alert('Selecione um nível para iniciar o jogo!');
                 return false;
             }
+            window.location.href = 'app.html?' + nivel;
         }
     </script>
 </head>
@@ -29,11 +30,12 @@
             <div class="col">
                 <div class="d-flex justify-content-center">
                     <div class="mb-2">
-                        <select class="form-control" name="" id="nivel">
+                        <select class="form-control" id="nivel">
                             <option value="">-- Selecione o Nível --</option>
                             <option value="facil">Fácil</option>
-                            <option value="medil">Médio</option>
+                            <option value="medio">Médio</option>
                             <option value="dificil">Difícil</option>
+                            <option value="impossivel">Expert</option>
                         </select>
                     </div>
                 </div>
